Updated html file locations

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
 <h1>Odin Recipes</h1>
 <img src="banner.jpg" alt="Banner Image" height="400" width="800">
-<p><a href="recipes/chicken-soup.html">Chicken Noodle Soup</a></p>
-<p><a href="recipes/beef-stew.html">Beef Stew</a></p>
-<p><a href="recipes/spaghetti-carbonara.html">Spaghetti Carbonara</a></p>
+<p><a href="chicken-soup.html">Chicken Noodle Soup</a></p>
+<p><a href="beef-stew.html">Beef Stew</a></p>
+<p><a href="spaghetti-carbonara.html">Spaghetti Carbonara</a></p>
 </body>
 </html>
